--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,32 @@
 {
+	"name": "basis/http",
+    "description": "Library for handling HTTP transactions in Basis",
+
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Alex Jeffrey",
+            "email": "alex@alexjeffrey.me"
+        }
+    ],
+
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/basisframework/objects"
+        }
+    ],
+
 	"require": {
-		"php": ">=5.4.0"
+		"php": ">=5.3.0",
+		"basis/objects": "dev-master"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*"
 	},
-	"autoload": {
-		"psr-4": {
-			"Basis\\Http\\": "src/"
-		}
-	}
+    "autoload": {
+        "psr-4": {
+            "Basis\\Http\\": "src/"
+        }
+    }
 }
